# mb-mstu-schedule-telegram-bot

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
app/shared/: value_objects.py
app/shcedules/: schedule.py
app/users/: user.py
